--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,8 @@
 
 :root {
     --primary-color: #ff5b2e;
+    --main-font: "Poppins", sans-serif;
+    --sub-font: "Sora", sans-serif;
 }
 
 html {
@@ -12,7 +14,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--main-font);
     background: #fffaf5;
 }
 
@@ -22,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Sora", sans-serif;
+    font-family: var(--sub-font);
 }
 
 input,
@@ -233,10 +235,10 @@ a {
 
 .hero-list__item-title {
     color: #181e52;
-    font-family: Sora, sans-serif;
+    font-family: var(--sub-font);
     font-size: 1.4;
     font-weight: 600;
-    line-height: 1; /* 100% */
+    line-height: 1;
 }
 
 .hero-list__item-skeleton {
@@ -302,7 +304,7 @@ a {
     text-decoration: underline;
 }
 
-/* -About */
+/* ----------------- About --------------------*/
 .about {
     margin-top: 138px;
 }
@@ -319,7 +321,7 @@ a {
 
 .about__label {
     color: #5e6085;
-    font-family: Sora, sans-serif;
+    font-family: var(--sub-font);
     font-size: 1.6rem;
     line-height: 1;
     font-weight: 600;
@@ -378,7 +380,7 @@ a {
 }
 
 .about__card-title {
-    font-family: Sora, sans-serif;
+    font-family: var(--sub-font);
     color: #fff;
     font-weight: 700;
     font-size: 4.2rem;
@@ -522,7 +524,7 @@ a {
 }
 
 .tab__title {
-    font-family: Sora, sans-serif;
+    font-family: var(--sub-font);
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 1;
@@ -562,4 +564,122 @@ a {
 .tab__content-more::after {
     opacity: 1;
     height: 1.5px;
+}
+
+/* ----------------- Service --------------------*/
+.service {
+    margin-top: 190px;
+    padding: 68px 0 100px;
+    background: #fff6ed;
+}
+
+.service__top {
+    text-align: center;
+}
+
+.service__desc {
+    margin-bottom: 15px;
+    color: #5e6085;
+    font-family: var(--sub-font);
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.service__body {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 70px;
+    margin-top: 70px;
+}
+
+.service-item {
+    padding: 30px;
+    width: 294px;
+    border-radius: 10px;
+    border: 2px solid rgba(255, 188, 122, 0.26);
+    background: #fff;
+}
+
+.service-item + .service-item {
+    margin-top: 24px;
+}
+
+.service-item__heading {
+    margin-left: 12px;
+    position: relative;
+    color: #000958;
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.service-item__heading::before {
+    margin-left: -12px;
+    position: absolute;
+    inset: 0 auto 0 0;
+    content: "";
+    display: inline-block;
+    width: 2px;
+    border-radius: 1px;
+    left: 0;
+    right: 0;
+    background: linear-gradient(90deg, #ff5b2e 0.39%, #ffa187 100.29%);
+}
+
+.service-item__desc {
+    margin-top: 18px;
+    color: #656689;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.71;
+}
+
+.service-item__more {
+    font-family: var(--sub-font);
+    display: inline-block;
+    margin-top: 24px;
+    color: #34396a;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.service-item__icon {
+    margin: 8px 0 -2px 2px;
+}
+
+.service__media {
+    position: relative;
+    margin-top: 18px;
+}
+
+.service__media::after {
+    content: "";
+    position: absolute;
+    height: 350px;
+    left: 16px;
+    right: 16px;
+    bottom: 0;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #9df1fb 0%, #73d0db 108.14%);
+}
+
+.service__img {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    display: block;
+}
+
+.service__cta-wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
+}
+
+.service__cta {
+    min-width: 214px;
+    color: #ff5b2e;
+    border-color: currentColor;
 }
